# Collective_MindGraph_desktop_app

./: .gitignore  AGENTS.md  CollectiveMindGraph.spec  DEMO_FLOW.md  DEMO_PRESENTATION_NOTES.md  DEMO_SCRIPT_EN.md  DEMO_SCRIPT_TR.md  HANDOFF.md  PATENT_SAFE_CLAIMS.md  PITCH_SUMMARY.md  PRESENTATION_PACKAGE_TR.md  PRODUCTION_GAP_AUDIT.md  PRODUCTION_RUNTIME_STATUS.md  PRODUCT_BASELINE_AUDIT.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_LOCAL_MVP.md  SLIDE_OUTLINE.md  TECHNICAL_OVERVIEW_FOR_PATENT.md  TECHNICAL_QA.md  V2_ROADMAP.md  agy.md  codex.md  pyproject.toml  script.py  script_200.py  script_merge.py  transcription_settings.json  ui_dump.txt
companion/: README.md  pyproject.toml
companion/src/collective_mindgraph_user_app/: __init__.py  __main__.py  app.py  database.py  models.py  services.py
companion/src/collective_mindgraph_user_app/ui/: __init__.py  main_window.py  session_list_panel.py  widgets.py
companion/tests/: test_database.py  test_services.py
datasets/: README.md
docs/: README.md  v2_architecture.md
models/: README.md
realtime_backend/: .env.example  README.md  __init__.py  requirements.txt
realtime_backend_temp/: export_simulation.json
scripts/: README.md  alpha_audio_smoke.py  asr_benchmark_common.py  benchmark_asr_accuracy.py  benchmark_cpu_vs_gpu_asr.py  benchmark_selective_retranscription.py  benchmark_transcription_quality_v2.py  build_windows_exe.ps1  check_asr_gpu.py  check_demo_readiness.sh  dev_backend.sh  dev_desktop.ps1  dev_desktop.sh  export_transcription_dataset.py  full_scale_gpu_transcription_test.py  install_friend_alpha_deps.bat  install_friend_alpha_deps.py  launch_cmg.bat  launch_cmg.py  launch_transcript_annotation.py  run_project_turkish_transcription_benchmark.py  run_transcription_experiments.py  validate_silero_vad_asr.py
tests/: README.md  test_ask_memory_evidence_validation.py  test_ask_memory_extended_intents.py  test_asr_benchmark_scripts.py  test_audio_capture.py  test_backend_hybrid_memory_query.py  test_backend_runtime.py  test_collective_mindgraph_product_loop.py  test_database.py  test_desktop_ask_memory_response.py  test_diagnostics_status_taxonomy.py  test_evidence_answer_service.py  test_extended_extraction_mapping.py  test_extended_graph_node_types.py  test_full_scale_simulation_regression.py  test_global_search.py  test_graph_reasoning.py  test_hybrid_memory_query.py  test_knowledge_graph_ui.py  test_knowledge_review_edit.py  test_launcher.py  test_llm_assisted_ask_memory_optional.py  test_local_llm_provider.py  test_main_window_live_ingest.py  test_memory_ask_endpoint.py  test_memory_export_import_roundtrip.py  test_memory_reason_endpoint.py  test_memory_search_ui_modes.py  test_memory_track_end_to_end.py  test_product_loop_demo.py  test_production_architecture_scaffold.py  test_production_backbone_advanced.py  test_production_graph_persistence.py  test_production_jobs.py  test_production_runtime_status.py  test_real_embedding_provider_config.py  test_real_local_llm_extraction_optional.py  test_real_local_semantic_retrieval_optional.py  test_realistic_turkish_fixture_validation.py  test_realtime_backend_transcription.py  (+21 more)
(+318 files in other folders)
