[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collective-mindgraph-desktop"
version = "0.1.0"
description = "Native PySide6 desktop application for local reasoning sessions and mind graph exploration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<6.9",
  "sounddevice>=0.5,<1.0",
  "vosk>=0.3.45,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
build = [
  "PyInstaller>=6.12,<7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["collective_mindgraph_desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
