[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collective-mindgraph-user-app"
version = "0.1.0"
description = "Native PySide6 desktop companion app for managing personal sessions, notes, insights, and mind maps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<6.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["collective_mindgraph_user_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
